src/stories/components/developer-card/developer-card.component.scss
@import 'index';
:host {
  display: flex;
  flex-wrap: wrap;

  .team-card {
    @include size(290px, 260px);
    @include flex(center, center, $direction: column);
    @include box-shadow(0px, 4px, 14px, 0, $black25);

    margin-bottom: 10%;

    text-align: center;
    border-radius: 1rem;
    background: white;

    @media screen and (max-width: $lg) {
      margin-right: 20px;
      margin-left: 20px;
    }

    &__image {
      @include size(120px);

      margin-bottom: 10px;

      background: $black25;
      border-radius: 50%;
      overflow: hidden;
    }

    &__name {
      @include font(18px);

      margin-bottom: 5px;
    }

    &__contribution {
      @include font(14px);

      margin-bottom: 5px;
    }

    &__icon {
      margin-right: 5px;
    }

    &__github {
      @include font(14px);

      text-decoration-line: underline;
    }
  }
}

